test/pass/pass21.pl2014
DECLARATION OF testnine
	TYPE posintlessonehundred : [1..100];
DECLARATION END